# finassist-ai-agent

./: .gitignore  README.md
agentcore/: .env.local.example  .gitignore  agentcore.json  aws-targets.json.example
agentcore/cdk/: package-lock.json
app/: main.py  pyproject.toml
app/finassist_agent/: __init__.py  logic.py  nova_config.py  nova_sonic.py  prompts.py  transcript_logger.py  voice_service.py
app/tests/: test_transcript_logger.py
