[project]
name = "finassist"
version = "1.0.0"
description = "FinAssist — AgentCore + AgentDuet + Nova Sonic 2 voice agent"
requires-python = ">=3.12"
dependencies = [
    "agentduet==1.0.0b7",
    "python-dotenv",
    "aws_sdk_bedrock_runtime",
    "bedrock-agentcore",
    "boto3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finassist_agent"]
